# wrkflw

./: AGENTS.md  BREAKING_CHANGES.md  CLAUDE.md  Cargo.toml  INDEX.md  README.md
.github/workflows/: build.yml
crates/evaluator/src/: lib.rs
crates/executor/: Cargo.toml
crates/executor/src/: action_resolver.rs  artifacts.rs  cache.rs  dependency.rs  docker.rs  docker_test.rs  engine.rs  expression.rs  github_env_files.rs  lib.rs  podman.rs  substitution.rs  workflow_commands.rs
crates/github/: Cargo.toml
crates/github/src/: lib.rs
crates/gitlab/: Cargo.toml
crates/gitlab/src/: lib.rs
crates/matrix/src/: lib.rs
crates/models/src/: lib.rs
crates/parser/src/: gitlab.rs  workflow.rs
crates/runtime/src/: container.rs  emulation.rs  emulation_test.rs  secure_emulation.rs
crates/secrets/benches/: masking_bench.rs
crates/secrets/src/: lib.rs  masking.rs  storage.rs
crates/secrets/tests/: integration_tests.rs
crates/trigger-filter/: Cargo.toml
crates/trigger-filter/src/: config.rs  error.rs  eval.rs  git.rs  lib.rs  model.rs  parser.rs  path_matcher.rs  ref_matcher.rs
crates/ui/: Cargo.toml
crates/validators/: Cargo.toml
crates/watcher/: Cargo.toml
crates/watcher/src/: debouncer.rs  error.rs  event_kind.rs  git_state.rs  ignore.rs  lib.rs  paths.rs  reactor.rs  setup.rs  shutdown.rs  trigger_cache.rs  watcher.rs
crates/wrkflw/: Cargo.toml
examples/ui-demo/: 01-dag-diamond.yml  02-dag-wide-fan.yml  03-dag-linear.yml  04-trigger-dispatch.yml  05-matrix-inspector.yml  06-secrets-runtime.yml  07-multi-event.yml  08-failing.yml
(+30 files in other folders)
